# mlops_hw

./: Dockerfile  Dockerfile.streamlit  README.md  README.txt  controller.py  database.ini  db.py  delete.py  docker-compose.yml  expected.json  get.py  insert.py  logs_book.txt  my_controller.py  pyproject.toml  response.json  service.py  table.sql  trainer.py  unittest_trainer.py  unittests.py
app/: main.py  pydantic_models.py  streamlit.py
hw1/app/: utils.py
hw1/ml_models/: base_model.py
hw2/: Dockerfile  Dockerfile.mlflow  docker-compose.yml
hw2/service/: pyproject.toml
hw2/service/app/: main.py  streamlit.py  utils.py
hw2/service/ml_models/: base_model.py  catboost_model.py  create_datasets.py
hw2/tests/: test_service_data_from_request.py
ml_models/: base_model.py  catboost_model.py  linear_model.py  task_metrics.py  tree_model.py
service/: ml_service_logs  pyproject.toml
service/app/: init_dvc.sh  main.py  streamlit.py  utils.py
service/ml_models/: base_model.py  catboost_model.py  linear_model.py  mlops_create_data.ipynb  task_metrics.py  tree_model.py
