[tool.poetry]
name = "mlops_hw"
version = "0.1.0"
description = "REST сервис для обучения и использования различных типов машинных моделей"
authors = ["Александр Кормишенков <alex.kormishenkov@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [
    {include = "ml_models"},
    {include = "app"}
]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.78.0"
uvicorn = "^0.17.0"
pydantic = "^1.9.1"
pandas = "^2.2.3"
numpy = "^1.26.0"
scikit-learn = "^1.5.6"
joblib = "^1.1.0"
catboost = "^1.2.2"
streamlit = "^1.12.0"
minio = "^8.0.10"
dvc = "^2.45.0"
mlflow = "^2.4.1"

[tool.poetry.dev-dependencies]
pytest = "^6.2.4"
black = "^21.12b0"
flake8 = "^4.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
