[tool.poetry]
name = "service"
version = "0.1.0"
description = "REST сервис для обучения и использования различных типов машинных моделей"
authors = ["Александр Кормишенков <alex.kormishenkov@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [
    {include = "ml_models"},
    {include = "app"}
]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.78.0"
uvicorn = "^0.17.0"
pydantic = "^1.9.1"
pandas = "^2.2.3"
numpy = "^1.26.0"
scikit-learn = "^1.5.6"
joblib = "^1.1.0"
catboost = "^1.2.2"
streamlit = "^1.12.0"
boto3 = "1.34.0"
minio = "7.2.12"
dvc = "3.57.0"
mlflow = "2.19.0"
python-multipart = "0.0.20"

[tool.poetry.dev-dependencies]
pytest = "^6.2.4"
black = "^21.12b0"
flake8 = "^4.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
